@@ -8,7 +8,9 @@
 #ifndef RC_INVOKED
 
 #include <crtdefs.h>
+#ifndef __CYGWIN__
 #include <setjmp.h>
+#endif
 #include <stddef.h>
 
 #if defined(__GNUC__) && \
@@ -180,6 +182,29 @@ extern "C" {
 extern "C" {
 #endif
 
+#ifndef __CYGWIN__
+	/* Put all declarations potentially colliding with POSIX headers here.
+	   So far, Cygwin is the only POSIX system using this header file.
+	   If that ever changes, make sure to tweak the guarding ifndef. */
+    __MACHINE(int __cdecl abs(int))
+    __MACHINEX64(double ceil(double))
+    __MACHINE(long __cdecl labs(long))
+    __MACHINECE(_CONST_RETURN void *__cdecl memchr(const void *,int,size_t))
+    __MACHINE(int __cdecl memcmp(const void *,const void *,size_t))
+    __MACHINE(void *__cdecl memcpy(void * __restrict__ ,const void * __restrict__ ,size_t))
+    __MACHINE(void *__cdecl memset(void *,int,size_t))
+    __MACHINE(char *__cdecl strcat(char *,const char *))
+    __MACHINE(int __cdecl strcmp(const char *,const char *))
+    __MACHINE(char *__cdecl strcpy(char * __restrict__ ,const char * __restrict__ ))
+    __MACHINE(size_t __cdecl strlen(const char *))
+    __MACHINECE(int __cdecl strncmp(const char *,const char *,size_t))
+    __MACHINECE(char *__cdecl strncpy(char * __restrict__ ,const char * __restrict__ ,size_t))
+    __MACHINEIW64(wchar_t *__cdecl wcscat(wchar_t * __restrict__ ,const wchar_t * __restrict__ ))
+    __MACHINEIW64(int __cdecl wcscmp(const wchar_t *,const wchar_t *))
+    __MACHINEIW64(wchar_t *__cdecl wcscpy(wchar_t * __restrict__ ,const wchar_t * __restrict__ ))
+    __MACHINEIW64(size_t __cdecl wcslen(const wchar_t *))
+#endif
+
   __MACHINEIA64(__MINGW_EXTENSION void _AcquireSpinLock(unsigned __int64 *))
 #ifdef __GNUC__
 #undef _alloca
@@ -187,16 +212,13 @@ extern "C" {
 #else
     __MACHINE(void *__cdecl _alloca(size_t))
 #endif
-    __MACHINE(int __cdecl abs(int))
     __MACHINEIA64(void __break(int))
     __MACHINECE(__MINGW_EXTENSION __int64 __cdecl _abs64(__int64))
     __MACHINE(unsigned short __cdecl _byteswap_ushort(unsigned short value))
-    __MACHINE(unsigned long __cdecl _byteswap_ulong(unsigned long value))
+    __MACHINE(unsigned __LONG32 __cdecl _byteswap_ulong(unsigned __LONG32 value))
     __MACHINE(__MINGW_EXTENSION unsigned __int64 __cdecl _byteswap_uint64(unsigned __int64 value))
     __MACHINECE(void __CacheRelease(void *))
     __MACHINECE(void __CacheWriteback(void *))
-    __MACHINECE(double ceil(double))
-    __MACHINEX64(double ceil(double))
     __MACHINECE(double ceil(double))
     __MACHINECE(__MINGW_EXTENSION double _CopyDoubleFromInt64(__int64))
     __MACHINECE(float _CopyFloatFromInt32(__int32))
@@ -232,7 +254,7 @@ extern "C" {
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedAdd64(__int64 volatile *,__int64))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedAdd64_acq(__int64 volatile *,__int64))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedAdd64_rel(__int64 volatile *,__int64))
-    __MACHINEI(long __cdecl _InterlockedDecrement(long volatile *))
+    __MACHINEI(__LONG32 __cdecl _InterlockedDecrement(__LONG32 volatile *))
     __MACHINEIA64(long _InterlockedDecrement(long volatile *))
     __MACHINEIA64(long _InterlockedDecrement_acq(long volatile *))
     __MACHINEIA64(long _InterlockedDecrement_rel(long volatile *))
@@ -240,7 +262,7 @@ extern "C" {
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedDecrement64_acq(__int64 volatile *))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedDecrement64_rel(__int64 volatile *))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedDecrement64(__int64 volatile *))
-    __MACHINEI(long _InterlockedExchange(long volatile *,long))
+    __MACHINEI(__LONG32 _InterlockedExchange(__LONG32 volatile *,__LONG32))
     __MACHINEIA64(long _InterlockedExchange(long volatile *,long))
     __MACHINEIA64(long _InterlockedExchange_acq(long volatile *,long))
     __MACHINESA(long WINAPI _InterlockedExchange(long volatile *,long))
@@ -250,7 +272,7 @@ extern "C" {
     __MACHINEIA64(void *_InterlockedExchangePointer(void *volatile *,void *))
     __MACHINEIA64(void *_InterlockedExchangePointer_acq(void *volatile *,void volatile *))
     __MACHINEX64(void *_InterlockedExchangePointer(void *volatile *,void *))
-    __MACHINEI(long _InterlockedExchangeAdd(long volatile *,long))
+    __MACHINEI(__LONG32 _InterlockedExchangeAdd(__LONG32 volatile *,__LONG32))
     __MACHINEIA64(long _InterlockedExchangeAdd(long volatile *,long))
     __MACHINEIA64(long _InterlockedExchangeAdd_acq(long volatile *,long))
     __MACHINEIA64(long _InterlockedExchangeAdd_rel(long volatile *,long))
@@ -258,7 +280,7 @@ extern "C" {
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedExchangeAdd64_acq(__int64 volatile *,__int64))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedExchangeAdd64_rel(__int64 volatile *,__int64))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedExchangeAdd64(__int64 volatile *,__int64))
-    __MACHINEI(long _InterlockedCompareExchange (long volatile *,long,long))
+    __MACHINEI(__LONG32 _InterlockedCompareExchange (__LONG32 volatile *,__LONG32,__LONG32))
     __MACHINEIA64(long _InterlockedCompareExchange (long volatile *,long,long))
     __MACHINEIA64(long _InterlockedCompareExchange_acq (long volatile *,long,long))
     __MACHINEIA64(long _InterlockedCompareExchange_rel (long volatile *,long,long))
@@ -276,7 +298,7 @@ extern "C" {
     __MACHINEIA64(void *_InterlockedCompareExchangePointer_rel (void *volatile *,void *,void *))
     __MACHINEI(__MINGW_EXTENSION __int64 _InterlockedCompareExchange64(__int64 volatile *,__int64,__int64))
     __MACHINEX64(void *_InterlockedCompareExchangePointer (void *volatile *,void *,void *))
-    __MACHINEI(long __cdecl _InterlockedIncrement(long volatile *))
+    __MACHINEI(__LONG32 __cdecl _InterlockedIncrement(__LONG32 volatile *))
     __MACHINEIA64(long _InterlockedIncrement(long volatile *))
     __MACHINEIA64(long _InterlockedIncrement_acq(long volatile *))
     __MACHINEIA64(long _InterlockedIncrement_rel(long volatile *))
@@ -284,7 +306,7 @@ extern "C" {
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedIncrement64_acq(__int64 volatile *))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedIncrement64_rel(__int64 volatile *))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedIncrement64(__int64 volatile *))
-    __MACHINEIW64(long _InterlockedOr(long volatile *,long))
+    __MACHINEIW64(__LONG32 _InterlockedOr(__LONG32 volatile *,__LONG32))
     __MACHINEIW64(char _InterlockedOr8(char volatile *,char))
     __MACHINEIW64(short _InterlockedOr16(short volatile *,short))
     __MACHINEW64(__MINGW_EXTENSION __int64 _InterlockedOr64(__int64 volatile *,__int64))
@@ -296,7 +318,7 @@ extern "C" {
     __MACHINEIA64(char _InterlockedOr8_rel(char volatile *,char))
     __MACHINEIA64(short _InterlockedOr16_rel(short volatile *,short))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedOr64_rel(__int64 volatile *,__int64))
-    __MACHINEIW64(long _InterlockedXor(long volatile *,long))
+    __MACHINEIW64(__LONG32 _InterlockedXor(__LONG32 volatile *,__LONG32))
     __MACHINEIW64(char _InterlockedXor8(char volatile *,char))
     __MACHINEIW64(short _InterlockedXor16(short volatile *,short))
     __MACHINEW64(__MINGW_EXTENSION __int64 _InterlockedXor64(__int64 volatile *,__int64))
@@ -308,7 +330,7 @@ extern "C" {
     __MACHINEIA64(char _InterlockedXor8_rel(char volatile *,char))
     __MACHINEIA64(short _InterlockedXor16_rel(short volatile *,short))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedXor64_rel(__int64 volatile *,__int64))
-    __MACHINEIW64(long _InterlockedAnd(long volatile *,long))
+    __MACHINEIW64(__LONG32 _InterlockedAnd(__LONG32 volatile *,__LONG32))
     __MACHINEIW64(char _InterlockedAnd8(char volatile *,char))
     __MACHINEIW64(short _InterlockedAnd16(short volatile *,short))
     __MACHINEW64(__MINGW_EXTENSION __int64 _InterlockedAnd64(__int64 volatile *,__int64))
@@ -320,11 +342,11 @@ extern "C" {
     __MACHINEIA64(char _InterlockedAnd8_rel(char volatile *,char))
     __MACHINEIA64(short _InterlockedAnd16_rel(short volatile *,short))
     __MACHINEIA64(__MINGW_EXTENSION __int64 _InterlockedAnd64_rel(__int64 volatile *,__int64))
-    __MACHINEIA32(__MINGW_EXTENSION long _InterlockedAddLargeStatistic(__int64 volatile *,long))
+    __MACHINEIA32(__MINGW_EXTENSION __LONG32 _InterlockedAddLargeStatistic(__int64 volatile *,__LONG32))
     __MACHINEI(int __cdecl _inp(unsigned short))
     __MACHINEI(int __cdecl inp(unsigned short))
-    __MACHINEI(unsigned long __cdecl _inpd(unsigned short))
-    __MACHINEI(unsigned long __cdecl inpd(unsigned short))
+    __MACHINEI(unsigned __LONG32 __cdecl _inpd(unsigned short))
+    __MACHINEI(unsigned __LONG32 __cdecl inpd(unsigned short))
     __MACHINEI(unsigned short __cdecl _inpw(unsigned short))
     __MACHINEI(unsigned short __cdecl inpw(unsigned short))
     __MACHINEIA64(int __isNat(int))
@@ -334,7 +356,6 @@ extern "C" {
     __MACHINECE(int _isnanf(float))
     __MACHINECE(int _isunordered(double,double))
     __MACHINECE(int _isunorderedf(float,float))
-    __MACHINE(long __cdecl labs(long))
     __MACHINEIA64(void __lfetch(int,void const *))
     __MACHINEIA64(void __lfetchfault(int,void const *))
     __MACHINEIA64(void __lfetch_excl(int,void const *))
@@ -351,8 +372,8 @@ extern "C" {
     __MACHINE(__MINGW_EXTENSION unsigned long long __cdecl _lrotl(unsigned long long,int))
     __MACHINE(__MINGW_EXTENSION unsigned long long __cdecl _lrotr(unsigned long long,int))
 #else
-    __MACHINE(unsigned long __cdecl _lrotl(unsigned long,int))
-    __MACHINE(unsigned long __cdecl _lrotr(unsigned long,int))
+    __MACHINE(unsigned __LONG32 __cdecl _lrotl(unsigned __LONG32,int))
+    __MACHINE(unsigned __LONG32 __cdecl _lrotr(unsigned __LONG32,int))
 #endif
 #pragma pop_macro ("_lrotl")
 #pragma pop_macro ("_lrotr")
@@ -397,18 +418,14 @@ extern "C" {
     __MACHINEIA64(__m64 __m64_psub2uus(__m64,__m64))
     __MACHINEIA64(__m64 __m64_shladd(__m64,const int,__m64))
     __MACHINEIA64(__m64 __m64_shrp(__m64,__m64,const int))
-    __MACHINECE(_CONST_RETURN void *__cdecl memchr(const void *,int,size_t))
-    __MACHINE(int __cdecl memcmp(const void *,const void *,size_t))
-    __MACHINE(void *__cdecl memcpy(void * __restrict__ ,const void * __restrict__ ,size_t))
-    __MACHINE(void *__cdecl memset(void *,int,size_t))
     __MACHINEIA64(void __mf(void))
     __MACHINEIA64(void __mfa(void))
     __MACHINECE(long _MulHigh(long,long))
     __MACHINECE(unsigned long _MulUnsignedHigh (unsigned long,unsigned long))
     __MACHINEI(int __cdecl _outp(unsigned short,int))
     __MACHINEI(int __cdecl outp(unsigned short,int))
-    __MACHINEI(unsigned long __cdecl _outpd(unsigned short,unsigned long))
-    __MACHINEI(unsigned long __cdecl outpd(unsigned short,unsigned long))
+    __MACHINEI(unsigned __LONG32 __cdecl _outpd(unsigned short,unsigned __LONG32))
+    __MACHINEI(unsigned __LONG32 __cdecl outpd(unsigned short,unsigned __LONG32))
     __MACHINEI(unsigned short __cdecl _outpw(unsigned short,unsigned short))
     __MACHINEI(unsigned short __cdecl outpw(unsigned short,unsigned short))
     __MACHINECE(void __cdecl __prefetch(unsigned long *addr))
@@ -441,6 +458,7 @@ extern "C" {
 #define _rotr64 __rorq
     __MACHINEIA64(void __rsm(int))
     __MACHINEIA64(void __rum(int))
+#ifndef __CYGWIN__
 #ifndef USE_NO_MINGW_SETJMP_TWO_ARGS
     __MACHINE(int __cdecl __attribute__ ((__nothrow__,__returns_twice__)) _setjmp(jmp_buf,void *))
     __MACHINEIA64(int __cdecl __attribute__ ((__nothrow__,__returns_twice__)) _setjmpex(jmp_buf,void *))
@@ -449,6 +467,7 @@ extern "C" {
     __MACHINE(int __cdecl __attribute__ ((__nothrow__,__returns_twice__)) _setjmp(jmp_buf))
     __MACHINEIA64(int __cdecl __attribute__ ((__nothrow__,__returns_twice__)) _setjmpex(jmp_buf))
     __MACHINEX64(int __cdecl __attribute__ ((__nothrow__,__returns_twice__)) _setjmpex(jmp_buf))
+#endif
 #endif
     __MACHINEIA64(__MINGW_EXTENSION void __setReg(int,unsigned __int64))
     __MACHINEARMX(void _SmulAdd_SL_ACC(int,int))
@@ -459,12 +478,6 @@ extern "C" {
     __MACHINEARMX(void _SmulAddLoHi_SW_ACC(int,int))
     __MACHINEIA64(__MINGW_EXTENSION void __store128(void *,__int64,__int64))
     __MACHINEIA64(__MINGW_EXTENSION void __store128_rel(void *,__int64,__int64))
-    __MACHINE(char *__cdecl strcat(char *,const char *))
-    __MACHINE(int __cdecl strcmp(const char *,const char *))
-    __MACHINE(char *__cdecl strcpy(char * __restrict__ ,const char * __restrict__ ))
-    __MACHINE(size_t __cdecl strlen(const char *))
-    __MACHINECE(int __cdecl strncmp(const char *,const char *,size_t))
-    __MACHINECE(char *__cdecl strncpy(char * __restrict__ ,const char * __restrict__ ,size_t))
     __MACHINE(char *__cdecl _strset(char *,int))
     __MACHINE(char *__cdecl strset(char *,int))
     __MACHINEIA64(void __ssm(int))
@@ -960,10 +973,10 @@ extern "C" {
     __MACHINEX64(__MINGW_EXTENSION unsigned __int64 __readcr3(void))
     __MACHINEX64(__MINGW_EXTENSION unsigned __int64 __readcr4(void))
     __MACHINEX64(__MINGW_EXTENSION unsigned __int64 __readcr8(void))
-    __MACHINEIA32(unsigned long __readcr0(void))
-    __MACHINEIA32(unsigned long __readcr2(void))
-    __MACHINEIA32(unsigned long __readcr3(void))
-    __MACHINEIA32(unsigned long __readcr4(void))
+    __MACHINEIA32(unsigned __LONG32 __readcr0(void))
+    __MACHINEIA32(unsigned __LONG32 __readcr2(void))
+    __MACHINEIA32(unsigned __LONG32 __readcr3(void))
+    __MACHINEIA32(unsigned __LONG32 __readcr4(void))
     __MACHINEX64(__MINGW_EXTENSION void __writecr0(unsigned __int64))
     __MACHINEX64(__MINGW_EXTENSION void __writecr3(unsigned __int64))
     __MACHINEX64(__MINGW_EXTENSION void __writecr4(unsigned __int64))
@@ -973,35 +986,35 @@ extern "C" {
     __MACHINEIA32(void __writecr4(unsigned))
     __MACHINEI(void __wbinvd(void))
     __MACHINEI(void __invlpg(void*))
-    __MACHINEI(__MINGW_EXTENSION unsigned __int64 __readmsr(unsigned long))
-    __MACHINEI(__MINGW_EXTENSION void __writemsr(unsigned long,unsigned __int64))
+    __MACHINEI(__MINGW_EXTENSION unsigned __int64 __readmsr(unsigned __LONG32))
+    __MACHINEI(__MINGW_EXTENSION void __writemsr(unsigned __LONG32,unsigned __int64))
 #ifndef __GNUC__
     __MACHINEI(__MINGW_EXTENSION unsigned __int64 __rdtsc(void))
 #endif
     __MACHINEI(void __movsb(unsigned char *,unsigned char const *,size_t))
     __MACHINEI(void __movsw(unsigned short *,unsigned short const *,size_t))
-    __MACHINEI(void __movsd(unsigned long *,unsigned long const *,size_t))
+    __MACHINEI(void __movsd(unsigned __LONG32 *,unsigned __LONG32 const *,size_t))
     __MACHINEX64(__MINGW_EXTENSION void __movsq(unsigned long long *,unsigned long long const *,size_t))
-    __MACHINEX64(unsigned char __readgsbyte(unsigned long Offset))
-    __MACHINEX64(unsigned short __readgsword(unsigned long Offset))
-    __MACHINEX64(unsigned long __readgsdword(unsigned long Offset))
-    __MACHINEX64(__MINGW_EXTENSION unsigned __int64 __readgsqword(unsigned long Offset))
-    __MACHINEX64(void __writegsbyte(unsigned long Offset,unsigned char Data))
-    __MACHINEX64(void __writegsword(unsigned long Offset,unsigned short Data))
-    __MACHINEX64(void __writegsdword(unsigned long Offset,unsigned long Data))
-    __MACHINEX64(__MINGW_EXTENSION void __writegsqword(unsigned long Offset,unsigned __int64 Data))
+    __MACHINEX64(unsigned char __readgsbyte(unsigned __LONG32 Offset))
+    __MACHINEX64(unsigned short __readgsword(unsigned __LONG32 Offset))
+    __MACHINEX64(unsigned __LONG32 __readgsdword(unsigned __LONG32 Offset))
+    __MACHINEX64(__MINGW_EXTENSION unsigned __int64 __readgsqword(unsigned __LONG32 Offset))
+    __MACHINEX64(void __writegsbyte(unsigned __LONG32 Offset,unsigned char Data))
+    __MACHINEX64(void __writegsword(unsigned __LONG32 Offset,unsigned short Data))
+    __MACHINEX64(void __writegsdword(unsigned __LONG32 Offset,unsigned __LONG32 Data))
+    __MACHINEX64(__MINGW_EXTENSION void __writegsqword(unsigned __LONG32 Offset,unsigned __int64 Data))
     __MACHINEI(unsigned char __inbyte(unsigned short Port))
     __MACHINEI(unsigned short __inword(unsigned short Port))
-    __MACHINEI(unsigned long __indword(unsigned short Port))
+    __MACHINEI(unsigned __LONG32 __indword(unsigned short Port))
     __MACHINEI(void __outbyte(unsigned short Port,unsigned char Data))
     __MACHINEI(void __outword(unsigned short Port,unsigned short Data))
-    __MACHINEI(void __outdword(unsigned short Port,unsigned long Data))
-    __MACHINEI(void __inbytestring(unsigned short Port,unsigned char *Buffer,unsigned long Count))
-    __MACHINEI(void __inwordstring(unsigned short Port,unsigned short *Buffer,unsigned long Count))
-    __MACHINEI(void __indwordstring(unsigned short Port,unsigned long *Buffer,unsigned long Count))
-    __MACHINEI(void __outbytestring(unsigned short Port,unsigned char *Buffer,unsigned long Count))
-    __MACHINEI(void __outwordstring(unsigned short Port,unsigned short *Buffer,unsigned long Count))
-    __MACHINEI(void __outdwordstring(unsigned short Port,unsigned long *Buffer,unsigned long Count))
+    __MACHINEI(void __outdword(unsigned short Port,unsigned __LONG32 Data))
+    __MACHINEI(void __inbytestring(unsigned short Port,unsigned char *Buffer,unsigned __LONG32 Count))
+    __MACHINEI(void __inwordstring(unsigned short Port,unsigned short *Buffer,unsigned __LONG32 Count))
+    __MACHINEI(void __indwordstring(unsigned short Port,unsigned __LONG32 *Buffer,unsigned __LONG32 Count))
+    __MACHINEI(void __outbytestring(unsigned short Port,unsigned char *Buffer,unsigned __LONG32 Count))
+    __MACHINEI(void __outwordstring(unsigned short Port,unsigned short *Buffer,unsigned __LONG32 Count))
+    __MACHINEI(void __outdwordstring(unsigned short Port,unsigned __LONG32 *Buffer,unsigned __LONG32 Count))
     __MACHINEI(unsigned int __getcallerseflags())
 #if !defined(__GNUC__) || !defined(__SSE2__)
     __MACHINEX64(__MINGW_EXTENSION __m128i _mm_set_epi64x(__int64 i1,__int64 i0))
@@ -1018,14 +1031,14 @@ extern "C" {
     __MACHINEX64(__MINGW_EXTENSION void _mm_stream_si64x(__int64 *,__int64))
     __MACHINEI(void __stosb(unsigned char *,unsigned char,size_t))
     __MACHINEI(void __stosw(unsigned short *,unsigned short,size_t))
-    __MACHINEI(void __stosd(unsigned long *,unsigned long,size_t))
+    __MACHINEI(void __stosd(unsigned __LONG32 *,unsigned __LONG32,size_t))
     __MACHINEX64(__MINGW_EXTENSION void __stosq(unsigned __int64 *,unsigned __int64,size_t))
-    __MACHINEIW64(unsigned char _bittest(long const *a,long b))
-    __MACHINEIW64(unsigned char _bittestandset(long *a,long b))
-    __MACHINEIW64(unsigned char _bittestandreset(long *a,long b))
-    __MACHINEIW64(unsigned char _bittestandcomplement(long *a,long b))
-    __MACHINEI(unsigned char _interlockedbittestandset(long *a,long b))
-    __MACHINEI(unsigned char _interlockedbittestandreset(long *a,long b))
+    __MACHINEIW64(unsigned char _bittest(__LONG32 const *a,__LONG32 b))
+    __MACHINEIW64(unsigned char _bittestandset(__LONG32 *a,__LONG32 b))
+    __MACHINEIW64(unsigned char _bittestandreset(__LONG32 *a,__LONG32 b))
+    __MACHINEIW64(unsigned char _bittestandcomplement(__LONG32 *a,__LONG32 b))
+    __MACHINEI(unsigned char _interlockedbittestandset(__LONG32 *a,__LONG32 b))
+    __MACHINEI(unsigned char _interlockedbittestandreset(__LONG32 *a,__LONG32 b))
     __MACHINEW64(__MINGW_EXTENSION unsigned char _bittest64(__int64 const *a,__int64 b))
     __MACHINEW64(__MINGW_EXTENSION unsigned char _bittestandset64(__int64 *a,__int64 b))
     __MACHINEW64(__MINGW_EXTENSION unsigned char _bittestandreset64(__int64 *a,__int64 b))
@@ -1033,28 +1046,24 @@ extern "C" {
     __MACHINEX64(__MINGW_EXTENSION unsigned char _interlockedbittestandset64(__int64 *a,__int64 b))
     __MACHINEX64(__MINGW_EXTENSION unsigned char _interlockedbittestandreset64(__int64 *a,__int64 b))
     __MACHINEI(void __cpuid(int a[4],int b))
-    __MACHINEI(__MINGW_EXTENSION unsigned __int64 __readpmc(unsigned long a))
-    __MACHINEI(unsigned long __segmentlimit(unsigned long a))
+    __MACHINEI(__MINGW_EXTENSION unsigned __int64 __readpmc(unsigned __LONG32 a))
+    __MACHINEI(unsigned __LONG32 __segmentlimit(unsigned __LONG32 a))
 
-    __MACHINEIA32(unsigned char __readfsbyte(unsigned long Offset))
-    __MACHINEIA32(unsigned short __readfsword(unsigned long Offset))
-    __MACHINEIA32(unsigned long __readfsdword(unsigned long Offset))
-    __MACHINEIA32(__MINGW_EXTENSION unsigned __int64 __readfsqword(unsigned long Offset))
-    __MACHINEIA32(void __writefsbyte(unsigned long Offset,unsigned char Data))
-    __MACHINEIA32(void __writefsword(unsigned long Offset,unsigned short Data))
-    __MACHINEIA32(void __writefsdword(unsigned long Offset,unsigned long Data))
-    __MACHINEIA32(__MINGW_EXTENSION void __writefsqword(unsigned long Offset,unsigned __int64 Data))
+    __MACHINEIA32(unsigned char __readfsbyte(unsigned __LONG32 Offset))
+    __MACHINEIA32(unsigned short __readfsword(unsigned __LONG32 Offset))
+    __MACHINEIA32(unsigned __LONG32 __readfsdword(unsigned __LONG32 Offset))
+    __MACHINEIA32(__MINGW_EXTENSION unsigned __int64 __readfsqword(unsigned __LONG32 Offset))
+    __MACHINEIA32(void __writefsbyte(unsigned __LONG32 Offset,unsigned char Data))
+    __MACHINEIA32(void __writefsword(unsigned __LONG32 Offset,unsigned short Data))
+    __MACHINEIA32(void __writefsdword(unsigned __LONG32 Offset,unsigned __LONG32 Data))
+    __MACHINEIA32(__MINGW_EXTENSION void __writefsqword(unsigned __LONG32 Offset,unsigned __int64 Data))
 
     __MACHINE(__MINGW_EXTENSION __int64 __cdecl _abs64(__int64))
 
-    __MACHINEIW64(unsigned char _BitScanForward(unsigned long *Index,unsigned long Mask))
-    __MACHINEIW64(unsigned char _BitScanReverse(unsigned long *Index,unsigned long Mask))
-    __MACHINEW64(__MINGW_EXTENSION unsigned char _BitScanForward64(unsigned long *Index,unsigned __int64 Mask))
-    __MACHINEW64(__MINGW_EXTENSION unsigned char _BitScanReverse64(unsigned long *Index,unsigned __int64 Mask))
-    __MACHINEIW64(wchar_t *__cdecl wcscat(wchar_t * __restrict__ ,const wchar_t * __restrict__ ))
-    __MACHINEIW64(int __cdecl wcscmp(const wchar_t *,const wchar_t *))
-    __MACHINEIW64(wchar_t *__cdecl wcscpy(wchar_t * __restrict__ ,const wchar_t * __restrict__ ))
-    __MACHINEIW64(size_t __cdecl wcslen(const wchar_t *))
+    __MACHINEIW64(unsigned char _BitScanForward(unsigned __LONG32 *Index,unsigned __LONG32 Mask))
+    __MACHINEIW64(unsigned char _BitScanReverse(unsigned __LONG32 *Index,unsigned __LONG32 Mask))
+    __MACHINEW64(__MINGW_EXTENSION unsigned char _BitScanForward64(unsigned __LONG32 *Index,unsigned __int64 Mask))
+    __MACHINEW64(__MINGW_EXTENSION unsigned char _BitScanReverse64(unsigned __LONG32 *Index,unsigned __int64 Mask))
     __MACHINEIW64(_CRTIMP wchar_t *__cdecl _wcsset(wchar_t *,wchar_t))
     __MACHINEW64(__MINGW_EXTENSION unsigned __int64 __shiftleft128(unsigned __int64 LowPart,unsigned __int64 HighPart,unsigned char Shift))
     __MACHINEW64(__MINGW_EXTENSION unsigned __int64 __shiftright128(unsigned __int64 LowPart,unsigned __int64 HighPart,unsigned char Shift))
@@ -1224,21 +1233,21 @@ extern "C" {
     __MACHINEIW64(void __nvreg_restore_fence(void))
 
     __MACHINEX64(short _InterlockedCompareExchange16_np(short volatile *Destination,short Exchange,short Comparand))
-    __MACHINEX64(long _InterlockedCompareExchange_np (long *,long,long))
+    __MACHINEX64(__LONG32 _InterlockedCompareExchange_np (__LONG32 *,__LONG32,__LONG32))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedCompareExchange64_np(__int64 *,__int64,__int64))
     __MACHINEX64(void *_InterlockedCompareExchangePointer_np (void **,void *,void *))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedCompare64Exchange128_np(__int64 *Destination,__int64 ExchangeHigh,__int64 ExchangeLow,__int64 Comparand))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedCompare64Exchange128_acq_np(__int64 *Destination,__int64 ExchangeHigh,__int64 ExchangeLow,__int64 Comparand))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedCompare64Exchange128_rel_np(__int64 *Destination,__int64 ExchangeHigh,__int64 ExchangeLow,__int64 Comparand))
-    __MACHINEX64(long _InterlockedAnd_np(long *,long))
+    __MACHINEX64(__LONG32 _InterlockedAnd_np(__LONG32 *,__LONG32))
     __MACHINEX64(char _InterlockedAnd8_np(char *,char))
     __MACHINEX64(short _InterlockedAnd16_np(short *,short))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedAnd64_np(__int64 *,__int64))
-    __MACHINEX64(long _InterlockedOr_np(long *,long))
+    __MACHINEX64(__LONG32 _InterlockedOr_np(__LONG32 *,__LONG32))
     __MACHINEX64(char _InterlockedOr8_np(char *,char))
     __MACHINEX64(short _InterlockedOr16_np(short *,short))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedOr64_np(__int64 *,__int64))
-    __MACHINEX64(long _InterlockedXor_np(long *,long))
+    __MACHINEX64(__LONG32 _InterlockedXor_np(__LONG32 *,__LONG32))
     __MACHINEX64(char _InterlockedXor8_np(char *,char))
     __MACHINEX64(short _InterlockedXor16_np(short *,short))
     __MACHINEX64(__MINGW_EXTENSION __int64 _InterlockedXor64_np(__int64 *,__int64))
